# oceans_2020

./: .gitignore  README.md  oceans2020_demo.launch  trash_lake.launch  trash_lake.world  visualize_netcdf_data.ipynb
current_data_files/: README.md  generate_stl_file.py  generate_stl_file_from_netcdf.ipynb  haversine_dist.py  pickle_locations.py  topological_and_hydro_visualization.ipynb  visualize.py  visualize_currents.py  visualize_netcdf_data.ipynb
current_data_files/jupyter_scratchpads/: generate_stl_file_from_netcdf.ipynb  topological_and_hydro_visualization.ipynb  visualize_netcdf_data.ipynb
data/: README.md
oceans_docker/: Dockerfile  README.md  attach_into_docker.sh  install_gazebo.sh  install_general_env.sh  install_uuv_pkgs.sh  run_interactive_docker.sh
src/: Ocean_data_scratchpad.ipynb  fetch_gazebo_wifi  gazebo_wifi_plugin
src/3d_sim/: RRT_new.py  RRT_results.txt  RRT_solutions.txt  astar_check_2.npy  astar_final_path.npy  astar_final_path20200721000558.npy  astar_path_check.npy  astar_path_seed.npy  astar_paths.txt  astar_paths_sn_s1_k3.txt  compare_nom_astar.py  compare_soln.txt  compile_data.py  cost_matrix.py  double_check_results.py  fourD_utils.py  hotspot_sampling_4dpp.py  hs4dpp_main_utils.py  hs4dpp_path_utils.py  nom_check_2.npy  nom_final_path.npy  nom_final_path20200721000558.npy  nom_final_path_double_check.npy  nom_path_check2.npy  nom_path_seed.npy  nom_simulation.py  notes.txt  plot_hotspots.py  santa_monica_energy_costs.npy  surface1_RRT_results_data_per.ods  test.py  trash_23D_save.py  vis_area.py
src/3d_sim/TSP/: HotspotAttempt1.ipynb  Hotspot_Budgeting_Code.ipynb  OP_Basic_working.ipynb  TRS0.lp  TSP.ipynb  (+5 more)
src/data_files/: CMakeLists.txt  README.md  package.xml
src/lajolla_world/: CMakeLists.txt  package.xml
src/soda_can_description/: CMakeLists.txt  package.xml
src/trash_finder/: CMakeLists.txt  README.md  package.xml
src/trash_finder/config/: demo_configs.p  locations.p  mowing_lawn_waypts_old.yaml  oceans2020_demo.yaml
src/trash_finder/launch/: check_pos.launch  oceans2020_demo.launch  produce_hydrodynamic_forces.launch  send_waypoints_file.launch  update_trash_states.launch
src/trash_finder/scripts/: 2d_demo.py  Hotspot_Sampling.py  Topological_Map.py  find_optimal_path_nrmpc.py  haversine_dist.py  init_soda_cans.py  man_create_soda_pos.py  pickle_configs.py  randomize_init_soda_cans.py  search.py  test.yaml  trash_sim.py  update_trash_states.py  uuv_local_current.py  vis_area.py
src/trash_utils/: CMakeLists.txt  README.md  package.xml  setup.py
src/trash_utils/src/trash_utils/: .finder_utils.py.swo  .finder_utils.py.swp  Env.py  UUV.py  cc_utils.py  finder_utils.py  fourD_utils.py  haversine_dist.py  trash_lib.py  visualize.py
src/trash_worlds/: CMakeLists.txt  README.md  package.xml
utils/: haversine_dist.py
(+30 files in other folders)
